add routes about ingredients
